...
                                        <rect key="frame" x="0.0" y="188" width="600" height="205"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YEV-dc-zHI">
                                                <rect key="frame" x="20" y="25" width="560" height="35"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10002693965517241" colorSpace="calibratedRGB"/>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Hg-g0-ThQ">
                                                <rect key="frame" x="20" y="85" width="560" height="35"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
...
                                                    <constraint firstAttribute="height" constant="35" id="3kl-4u-1bh"/>
                                                </constraints>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
...
                                                    <constraint firstAttribute="height" constant="45" id="35Y-IV-1rp"/>
                                                </constraints>
                                                <state key="normal" title="Don't have an account? Sign Up.">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="0.75" colorSpace="calibratedRGB"/>
                                                </state>
...
                                                </connections>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Confirm Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cz9-S2-rmV">
                                                <rect key="frame" x="20" y="205" width="560" height="35"/>
                                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.10000000000000001" colorSpace="calibratedRGB"/>
...
                                                    <constraint firstAttribute="height" constant="35" id="OZz-5D-caI"/>
                                                </constraints>
                                                <state key="normal" title="Register">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
...
                                                    <constraint firstAttribute="width" constant="80" id="Z4S-no-4Im"/>
                                                </constraints>
                                                <state key="normal" title="Male">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                                    <constraint firstAttribute="width" secondItem="nOA-go-4Do" secondAttribute="height" multiplier="78:77" id="Lt2-wo-QPL"/>
                                                </constraints>
                                                <state key="normal" title="Female">
                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                </state>
...
                                                        <constraint firstAttribute="width" constant="60" id="tpU-lH-qYW"/>
                                                    </constraints>
                                                    <state key="normal" title="Send"/>
                                                    <variation key="default">
                                                        <mask key="constraints">
...
