...
class ChangeEmailView: UIViewController {
    @IBOutlet weak var SaveButton: UIButton!
    @IBOutlet weak var EmailTF: UITextField!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        EmailTF.placeholder = "Enter valid email"
        // Do any additional setup after loading the view.
    }

    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
        // Dispose of any resources that can be recreated.
...
