...
    
    var validEmail: Bool!
    var changeEmailDelegate: ChangeEmailDelegate!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Change Email"
        
        emailTextField.attributedPlaceholder = NSAttributedString(string: emailTextField.placeholder!, attributes:[NSForegroundColorAttributeName: UIColor(white: 1, alpha: 0.15)])
        
        emailTextField.text = ""
        validEmail = false
        saveBarButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonSystemItem.Save, target: self, action: #selector(ChangeEmailViewController.saveTap))
...
