...
    }
    
    func clearGallery(button: UIButton, gallery: GalleriesViewController.Gallery) {
        if(Reachability.isConnectedToNetwork()) { //if we are connected to the network
            var galleryTitle = ""
            if(gallery == .Saved) {
                galleryTitle = "Saved"
            } else {
                galleryTitle = "Commented"
            }
            let alert = UIAlertController(title: "Are You Sure?", message: "This will permanantly delete all your \(galleryTitle) outfits", preferredStyle: UIAlertControllerStyle.Alert) //create an alert object
            alert.addAction(UIAlertAction(title: "Yes", style: UIAlertActionStyle.Default, handler: { //add a Yes action whos handler takes us back to settings table
                (alert: UIAlertAction!) in
                if(gallery == .Saved) {
                    let savedPostsObjectIDsQuery = PFQuery(className: "UserInformation")
...
