...
        //voteObserver.react()
        //didVoteOnce.watchME = true
        super.viewDidLoad()
        
        
        searchBar.delegate = self
        searchBar.placeholder = "Ex: red sweater, blue cardigan, casual, etc,."
        //set the first thumnail to null so that it doesnt break the app

        
        //Math to determine size of cells
        let cellWidth = (view.frame.width/cellsPerRow)
        let cellHeight = cellWidth
...
